feat: update dashkit

--- a/src/button/style.scss
+++ b/src/button/style.scss
@@ -17,6 +17,7 @@ $btn-prefix: 'dk-btn';
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
+  color: $gray-700;
 
   &:focus,
   &.focus {
