--- a/src/style/_functions.scss
+++ b/src/style/_functions.scss
@@ -72,3 +72,13 @@
   $level: abs($level);
   @return mix($color-base, $color, $level * 8%);
 }
+
+@mixin reset-component() {
+  font-size: $font-size-base;
+  line-height: $line-height-base;
+  color: $text-color;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
