--- a/src/menu/style.scss
+++ b/src/menu/style.scss
@@ -230,7 +230,7 @@ $menu-prefix: 'dk-menu';
     color: $menu-dark-item-color;
 
     &:hover {
-      background-color: transparent;
+      background-color: $menu-dark-bg;
       color: $menu-dark-item-active-color;
     }
   }
@@ -256,6 +256,16 @@ $menu-prefix: 'dk-menu';
       float: none;
       width: 100%;
       height: $menu-vertical-item-height;
+    }
+
+    .#{$menu-prefix}-item,
+    .#{$menu-prefix}-submenu-title {
+      color: $menu-dark-item-color;
+
+      &:hover {
+        background-color: $menu-dark-item-active-bg;
+        color: $menu-dark-item-active-color;
+      }
     }
   }
 }
