--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -325,7 +325,7 @@ $menu-disabled-opacity:                 .5 !default;
 
 $menu-dark-bg:                          #152e4d !default;
 $menu-dark-border-color:                $gray-900 !default;
-$menu-dark-item-color:                  $gray-600 !default;
+$menu-dark-item-color:                  #6e84a3 !default;
 $menu-dark-item-active-color:           $white !default;
 $menu-dark-item-active-bg:              mix($black, $primary, 75%) !default;
 $menu-shadow:                           0 2px 8px rgba($black, .25) !default;
