--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -352,4 +352,5 @@ $popover-padding-y:                     16px !default;
 $popover-arrow-color:                   $popover-bg !default;
 $popover-arrow-size:                    6px !default;
 $popover-distance:                      $popover-arrow-size + 4px !default;
+$popover-border-color:                  #e3ebf6 !default;
 $popover-box-shadow:                    0 2px 8px rgba(0, 0, 0, .15) !default;
