--- a/src/checkbox/style.scss
+++ b/src/checkbox/style.scss
@@ -5,6 +5,7 @@
 $checkbox-prefix: 'dk-checkbox';
 
 .#{$checkbox-prefix} {
+  @include reset-component();
   position: relative;
   display: inline-block;
   margin: 0;
