--- a/src/style/_reboot.scss
+++ b/src/style/_reboot.scss
@@ -83,10 +83,10 @@ h6 {
   font-size: $h6-font-size;
 }
 
-p {
-  margin-top: 0;
-  margin-bottom: 16px;
-}
+// p {
+//   margin-top: 0;
+//   margin-bottom: 16px;
+// }
 
 abbr[title],
 abbr[data-original-title] { // 4
