--- a/site/component/common/sidebar.scss
+++ b/site/component/common/sidebar.scss
@@ -1,11 +1,13 @@
 
+@import '../../../src/style/theme.scss';
+
 .sidebar {
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 250px;
-  border-right: 1px solid #e3ebf6;
+  border-right: 1px solid $border-color;
   overflow: scroll;
   z-index: 9;
 
