--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -181,6 +181,8 @@ $scrollbar-thumb-size:              6px !default;
 // Input
 //
 $input-height:                      34px !default;
+$input-height-sm:                   24px !default;
+$input-height-lg:                   40px !default;
 $input-padding-y:                   6px !default;
 $input-padding-x:                   12px !default;
 
@@ -188,7 +190,7 @@ $input-color:                       $gray-600 !default;
 $input-bg:                          $white !default;
 $input-disabled-bg:                 $gray-200 !default;
 
-$input-border-color:                #d2ddec !default;
+$input-border-color:                $border-color !default;
 $input-box-shadow:                  inset 0 1px 1px rgba($primary, .075) !default;
 $input-transition:                  border-color .15s $ease-in-out, box-shadow .15s $ease-in-out !default;
 $input-placeholder-color:           #b1c2d9 !default;
