--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -370,7 +370,8 @@ $popover-box-shadow:                    0 2px 8px rgba(0, 0, 0, .15) !default;
 // Modal
 //
 $modal-bg:                              $white !default;
-$modal-body-padding:                    24px !default;
+$modal-padding-x:                       24px !default;
+$modal-padding-y:                       16px !default;
 $modal-box-shadow:                      0 4px 12px rgba(0, 0, 0, .15) !default;
 $modal-transfrom-y:                     -150px !default;
 $modal-transition:                      transform 300ms $ease-fade, opacity 300ms $ease-fade !default;
